--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: 0.13.4
+  carousel_slider: 4.1.1
+  smooth_page_indicator: 1.0.0+2
+  cached_network_image: 3.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
