--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   carousel_slider: 4.1.1
   smooth_page_indicator: 1.0.0+2
   cached_network_image: 3.2.1
+  lazy_load_scrollview: 1.3.0
+  provider: 6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
