--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -32,3 +32,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EC_APP_CHALLENGE }}'
           channelId: live
           projectId: ec-app-challenge
+          entrypoint: frontend/
