--- a/.github/workflows/api_deploy_heroku.yml
+++ b/.github/workflows/api_deploy_heroku.yml
@@ -3,7 +3,7 @@ name: Deploy API to Heroku
 on:
   push:
     branches:
-      - dev 
+      - main 
     paths: 
       - "api/**"
       - ".github/workflows/api_deploy_heroku.yml"
